Fix activities icon spelling

--- a/babybuddy/static_src/fontello/demo.html
+++ b/babybuddy/static_src/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'babybuddy';
-      src: url('./font/babybuddy.eot?7073460');
-      src: url('./font/babybuddy.eot?7073460#iefix') format('embedded-opentype'),
-           url('./font/babybuddy.woff?7073460') format('woff'),
-           url('./font/babybuddy.ttf?7073460') format('truetype'),
-           url('./font/babybuddy.svg?7073460#babybuddy') format('svg');
+      src: url('../font/babybuddy.eot?53495866');
+      src: url('../font/babybuddy.eot?53495866#iefix') format('embedded-opentype'),
+           url('../font/babybuddy.woff?53495866') format('woff'),
+           url('../font/babybuddy.ttf?53495866') format('truetype'),
+           url('../font/babybuddy.svg?53495866#babybuddy') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -189,7 +189,7 @@
       /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
     }
     </style>
-    <link rel="stylesheet" href="css/animation.css"><!--[if IE 7]><link rel="stylesheet" href="css/" + font.fontname + "-ie7.css"><![endif]-->
+    <link rel="stylesheet" href="../css/animation.css"><!--[if IE 7]><link rel="stylesheet" href="css/" + font.fontname + "-ie7.css"><![endif]-->
     <script>
       function toggleCodes(on) {
         var obj = document.getElementById('icons');
@@ -291,7 +291,7 @@
           <i class="demo-icon icon-feeding">&#xf1b1;</i> <span class="i-name">icon-feeding</span><span class="i-code">0xf1b1</span>
         </div>
         <div class="span3" title="Code: 0xf1b3">
-          <i class="demo-icon icon-activites">&#xf1b3;</i> <span class="i-name">icon-activites</span><span class="i-code">0xf1b3</span>
+          <i class="demo-icon icon-activities">&#xf1b3;</i> <span class="i-name">icon-activities</span><span class="i-code">0xf1b3</span>
         </div>
       </div>
       <div class="row">
