Fix refresh icon name

--- a/babybuddy/static_src/fontello/demo.html
+++ b/babybuddy/static_src/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'babybuddy';
-      src: url('../font/babybuddy.eot?53495866');
-      src: url('../font/babybuddy.eot?53495866#iefix') format('embedded-opentype'),
-           url('../font/babybuddy.woff?53495866') format('woff'),
-           url('../font/babybuddy.ttf?53495866') format('truetype'),
-           url('../font/babybuddy.svg?53495866#babybuddy') format('svg');
+      src: url('./font/babybuddy.eot?3123187');
+      src: url('./font/babybuddy.eot?3123187#iefix') format('embedded-opentype'),
+           url('./font/babybuddy.woff?3123187') format('woff'),
+           url('./font/babybuddy.ttf?3123187') format('truetype'),
+           url('./font/babybuddy.svg?3123187#babybuddy') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -189,7 +189,7 @@
       /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
     }
     </style>
-    <link rel="stylesheet" href="../css/animation.css"><!--[if IE 7]><link rel="stylesheet" href="css/" + font.fontname + "-ie7.css"><![endif]-->
+    <link rel="stylesheet" href="css/animation.css"><!--[if IE 7]><link rel="stylesheet" href="css/" + font.fontname + "-ie7.css"><![endif]-->
     <script>
       function toggleCodes(on) {
         var obj = document.getElementById('icons');
@@ -243,7 +243,7 @@
           <i class="demo-icon icon-lock">&#xe808;</i> <span class="i-name">icon-lock</span><span class="i-code">0xe808</span>
         </div>
         <div class="span3" title="Code: 0xe809">
-          <i class="demo-icon icon-arrows-cw">&#xe809;</i> <span class="i-name">icon-arrows-cw</span><span class="i-code">0xe809</span>
+          <i class="demo-icon icon-refresh">&#xe809;</i> <span class="i-name">icon-refresh</span><span class="i-code">0xe809</span>
         </div>
         <div class="span3" title="Code: 0xe80a">
           <i class="demo-icon icon-stop">&#xe80a;</i> <span class="i-name">icon-stop</span><span class="i-code">0xe80a</span>
