--- a/babybuddy/static_src/fontello/demo.html
+++ b/babybuddy/static_src/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'babybuddy';
-      src: url('./font/babybuddy.eot?3123187');
-      src: url('./font/babybuddy.eot?3123187#iefix') format('embedded-opentype'),
-           url('./font/babybuddy.woff?3123187') format('woff'),
-           url('./font/babybuddy.ttf?3123187') format('truetype'),
-           url('./font/babybuddy.svg?3123187#babybuddy') format('svg');
+      src: url('./font/babybuddy.eot?3175326');
+      src: url('./font/babybuddy.eot?3175326#iefix') format('embedded-opentype'),
+           url('./font/babybuddy.woff?3175326') format('woff'),
+           url('./font/babybuddy.ttf?3175326') format('truetype'),
+           url('./font/babybuddy.svg?3175326#babybuddy') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -262,11 +262,28 @@
         <div class="span3" title="Code: 0xe80e">
           <i class="demo-icon icon-user">&#xe80e;</i> <span class="i-name">icon-user</span><span class="i-code">0xe80e</span>
         </div>
-        <div class="span3" title="Code: 0xf0e4">
-          <i class="demo-icon icon-dashboard">&#xf0e4;</i> <span class="i-name">icon-dashboard</span><span class="i-code">0xf0e4</span>
+        <div class="span3" title="Code: 0xe80f">
+          <i class="demo-icon icon-clock">&#xe80f;</i> <span class="i-name">icon-clock</span><span class="i-code">0xe80f</span>
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe810">
+          <i class="demo-icon icon-calendar">&#xe810;</i> <span class="i-name">icon-calendar</span><span class="i-code">0xe810</span>
+        </div>
+        <div class="span3" title="Code: 0xe811">
+          <i class="demo-icon icon-arrow-up">&#xe811;</i> <span class="i-name">icon-arrow-up</span><span class="i-code">0xe811</span>
+        </div>
+        <div class="span3" title="Code: 0xe812">
+          <i class="demo-icon icon-arrow-down">&#xe812;</i> <span class="i-name">icon-arrow-down</span><span class="i-code">0xe812</span>
+        </div>
+        <div class="span3" title="Code: 0xe813">
+          <i class="demo-icon icon-cancel">&#xe813;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe813</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xf0e4">
+          <i class="demo-icon icon-dashboard">&#xf0e4;</i> <span class="i-name">icon-dashboard</span><span class="i-code">0xf0e4</span>
+        </div>
         <div class="span3" title="Code: 0xf118">
           <i class="demo-icon icon-tummytime">&#xf118;</i> <span class="i-name">icon-tummytime</span><span class="i-code">0xf118</span>
         </div>
@@ -276,11 +293,11 @@
         <div class="span3" title="Code: 0xf126">
           <i class="demo-icon icon-source">&#xf126;</i> <span class="i-name">icon-source</span><span class="i-code">0xf126</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf137">
           <i class="demo-icon icon-angle-circled-left">&#xf137;</i> <span class="i-name">icon-angle-circled-left</span><span class="i-code">0xf137</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf138">
           <i class="demo-icon icon-angle-circled-right">&#xf138;</i> <span class="i-name">icon-angle-circled-right</span><span class="i-code">0xf138</span>
         </div>
@@ -290,11 +307,11 @@
         <div class="span3" title="Code: 0xf1b1">
           <i class="demo-icon icon-feeding">&#xf1b1;</i> <span class="i-name">icon-feeding</span><span class="i-code">0xf1b1</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf1b3">
           <i class="demo-icon icon-activities">&#xf1b3;</i> <span class="i-name">icon-activities</span><span class="i-code">0xf1b3</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf1da">
           <i class="demo-icon icon-timeline">&#xf1da;</i> <span class="i-name">icon-timeline</span><span class="i-code">0xf1da</span>
         </div>
@@ -304,13 +321,16 @@
         <div class="span3" title="Code: 0xf236">
           <i class="demo-icon icon-sleep">&#xf236;</i> <span class="i-name">icon-sleep</span><span class="i-code">0xf236</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf249">
           <i class="demo-icon icon-note">&#xf249;</i> <span class="i-name">icon-note</span><span class="i-code">0xf249</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf24e">
           <i class="demo-icon icon-weight">&#xf24e;</i> <span class="i-name">icon-weight</span><span class="i-code">0xf24e</span>
+        </div>
+        <div class="span3" title="Code: 0xf274">
+          <i class="demo-icon icon-today">&#xf274;</i> <span class="i-name">icon-today</span><span class="i-code">0xf274</span>
         </div>
         <div class="span3" title="Code: 0xf2c8">
           <i class="demo-icon icon-temperature">&#xf2c8;</i> <span class="i-name">icon-temperature</span><span class="i-code">0xf2c8</span>
