--- a/babybuddy/static_src/fontello/demo.html
+++ b/babybuddy/static_src/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'babybuddy';
-      src: url('./font/babybuddy.eot?3175326');
-      src: url('./font/babybuddy.eot?3175326#iefix') format('embedded-opentype'),
-           url('./font/babybuddy.woff?3175326') format('woff'),
-           url('./font/babybuddy.ttf?3175326') format('truetype'),
-           url('./font/babybuddy.svg?3175326#babybuddy') format('svg');
+      src: url('./font/babybuddy.eot?20083249');
+      src: url('./font/babybuddy.eot?20083249#iefix') format('embedded-opentype'),
+           url('./font/babybuddy.woff?20083249') format('woff'),
+           url('./font/babybuddy.ttf?20083249') format('truetype'),
+           url('./font/babybuddy.svg?20083249#babybuddy') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -281,9 +281,20 @@
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe814">
+          <i class="demo-icon icon-head-circumference">&#xe814;</i> <span class="i-name">icon-head-circumference</span><span class="i-code">0xe814</span>
+        </div>
+        <div class="span3" title="Code: 0xe815">
+          <i class="demo-icon icon-measurements">&#xe815;</i> <span class="i-name">icon-measurements</span><span class="i-code">0xe815</span>
+        </div>
+        <div class="span3" title="Code: 0xf044">
+          <i class="demo-icon icon-height">&#xf044;</i> <span class="i-name">icon-height</span><span class="i-code">0xf044</span>
+        </div>
         <div class="span3" title="Code: 0xf0e4">
           <i class="demo-icon icon-dashboard">&#xf0e4;</i> <span class="i-name">icon-dashboard</span><span class="i-code">0xf0e4</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf118">
           <i class="demo-icon icon-tummytime">&#xf118;</i> <span class="i-name">icon-tummytime</span><span class="i-code">0xf118</span>
         </div>
@@ -293,11 +304,11 @@
         <div class="span3" title="Code: 0xf126">
           <i class="demo-icon icon-source">&#xf126;</i> <span class="i-name">icon-source</span><span class="i-code">0xf126</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf137">
           <i class="demo-icon icon-angle-circled-left">&#xf137;</i> <span class="i-name">icon-angle-circled-left</span><span class="i-code">0xf137</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf138">
           <i class="demo-icon icon-angle-circled-right">&#xf138;</i> <span class="i-name">icon-angle-circled-right</span><span class="i-code">0xf138</span>
         </div>
@@ -307,11 +318,11 @@
         <div class="span3" title="Code: 0xf1b1">
           <i class="demo-icon icon-feeding">&#xf1b1;</i> <span class="i-name">icon-feeding</span><span class="i-code">0xf1b1</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf1b3">
           <i class="demo-icon icon-activities">&#xf1b3;</i> <span class="i-name">icon-activities</span><span class="i-code">0xf1b3</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf1da">
           <i class="demo-icon icon-timeline">&#xf1da;</i> <span class="i-name">icon-timeline</span><span class="i-code">0xf1da</span>
         </div>
@@ -321,16 +332,19 @@
         <div class="span3" title="Code: 0xf236">
           <i class="demo-icon icon-sleep">&#xf236;</i> <span class="i-name">icon-sleep</span><span class="i-code">0xf236</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf249">
           <i class="demo-icon icon-note">&#xf249;</i> <span class="i-name">icon-note</span><span class="i-code">0xf249</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf24e">
           <i class="demo-icon icon-weight">&#xf24e;</i> <span class="i-name">icon-weight</span><span class="i-code">0xf24e</span>
         </div>
         <div class="span3" title="Code: 0xf274">
           <i class="demo-icon icon-today">&#xf274;</i> <span class="i-name">icon-today</span><span class="i-code">0xf274</span>
+        </div>
+        <div class="span3" title="Code: 0xf295">
+          <i class="demo-icon icon-bmi">&#xf295;</i> <span class="i-name">icon-bmi</span><span class="i-code">0xf295</span>
         </div>
         <div class="span3" title="Code: 0xf2c8">
           <i class="demo-icon icon-temperature">&#xf2c8;</i> <span class="i-name">icon-temperature</span><span class="i-code">0xf2c8</span>
