Add first/last links in pagination

--- a/babybuddy/static_src/fontello/demo.html
+++ b/babybuddy/static_src/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'babybuddy';
-      src: url('./font/babybuddy.eot?22207665');
-      src: url('./font/babybuddy.eot?22207665#iefix') format('embedded-opentype'),
-           url('./font/babybuddy.woff?22207665') format('woff'),
-           url('./font/babybuddy.ttf?22207665') format('truetype'),
-           url('./font/babybuddy.svg?22207665#babybuddy') format('svg');
+      src: url('./font/babybuddy.eot?82997938');
+      src: url('./font/babybuddy.eot?82997938#iefix') format('embedded-opentype'),
+           url('./font/babybuddy.woff?82997938') format('woff'),
+           url('./font/babybuddy.ttf?82997938') format('truetype'),
+           url('./font/babybuddy.svg?82997938#babybuddy') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,6 +301,20 @@
             <div class="row">
                 <div class="span3" title="Code: 0xf0e4">
                     <i class="demo-icon icon-dashboard">&#xf0e4;</i> <span class="i-name">icon-dashboard</span><span class="i-code">0xf0e4</span>
+                </div>
+                <div class="span3" title="Code: 0xf100">
+                    <i class="demo-icon icon-angle-double-left">&#xf100;</i> <span class="i-name">icon-angle-double-left</span><span class="i-code">0xf100</span>
+                </div>
+                <div class="span3" title="Code: 0xf101">
+                    <i class="demo-icon icon-angle-double-right">&#xf101;</i> <span class="i-name">icon-angle-double-right</span><span class="i-code">0xf101</span>
+                </div>
+                <div class="span3" title="Code: 0xf104">
+                    <i class="demo-icon icon-angle-left">&#xf104;</i> <span class="i-name">icon-angle-left</span><span class="i-code">0xf104</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span3" title="Code: 0xf105">
+                    <i class="demo-icon icon-angle-right">&#xf105;</i> <span class="i-name">icon-angle-right</span><span class="i-code">0xf105</span>
                 </div>
                 <div class="span3" title="Code: 0xf118">
                     <i class="demo-icon icon-tummytime">&#xf118;</i> <span class="i-name">icon-tummytime</span><span class="i-code">0xf118</span>
