Add links to entry history

--- a/babybuddy/static_src/fontello/demo.html
+++ b/babybuddy/static_src/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'babybuddy';
-      src: url('./font/babybuddy.eot?26282519');
-      src: url('./font/babybuddy.eot?26282519#iefix') format('embedded-opentype'),
-           url('./font/babybuddy.woff?26282519') format('woff'),
-           url('./font/babybuddy.ttf?26282519') format('truetype'),
-           url('./font/babybuddy.svg?26282519#babybuddy') format('svg');
+      src: url('./font/babybuddy.eot?60769522');
+      src: url('./font/babybuddy.eot?60769522#iefix') format('embedded-opentype'),
+           url('./font/babybuddy.woff?60769522') format('woff'),
+           url('./font/babybuddy.ttf?60769522') format('truetype'),
+           url('./font/babybuddy.svg?60769522#babybuddy') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -345,7 +345,7 @@
                     <i class="demo-icon icon-activities">&#xf1b3;</i> <span class="i-name">icon-activities</span><span class="i-code">0xf1b3</span>
                 </div>
                 <div class="span3" title="Code: 0xf1da">
-                    <i class="demo-icon icon-timeline">&#xf1da;</i> <span class="i-name">icon-timeline</span><span class="i-code">0xf1da</span>
+                    <i class="demo-icon icon-history">&#xf1da;</i> <span class="i-name">icon-history</span><span class="i-code">0xf1da</span>
                 </div>
                 <div class="span3" title="Code: 0xf1f8">
                     <i class="demo-icon icon-diaperchange">&#xf1f8;</i> <span class="i-name">icon-diaperchange</span><span class="i-code">0xf1f8</span>
